--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">motivation</string>
+    <string name="app_name">Motivation</string>
+    <string name="msg_inicial">Vamos Começar?</string>
+    <string name="insert_name">Qual seu nome?</string>
+    <string name="salvar">Salvar</string>
 </resources>
